--- a/PhantasmaMail/PhantasmaMail/Resources/AppResource.resx
+++ b/PhantasmaMail/PhantasmaMail/Resources/AppResource.resx
@@ -144,6 +144,9 @@
   <data name="Entry_Password_Text" xml:space="preserve">
     <value>Password</value>
   </data>
+  <data name="Entry_Username_Text" xml:space="preserve">
+    <value>Username</value>
+  </data>
   <data name="Entry_WIF_Text" xml:space="preserve">
     <value>WIF</value>
   </data>
